<resources>
    <string name="app_name">ChatApp</string>
    <string name="need_a_new_account">Need a New Account?</string>
    <string name="profile_name">Profile Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="welcome_to_the_nchatapp">Welcome to the\nChatApp</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="login">Login</string>
    <string name="loading">Loading...</string>
    <string name="account_settings">Account Settings</string>
    <string name="all_users">All Users</string>
    <string name="display_name">Display Name</string>
    <string name="hey_i_m_on_chatapp">Hey! I\'m on ChatApp :)</string>
    <string name="change_profile_pic">Change Profile Pic</string>
    <string name="change_status">Change Status</string>
    <string name="your_status">Your Status</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="total_friends">Total Friends</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="last_seen">Last Seen</string>
    <string name="enter_message">Enter Message</string>
</resources>
