<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".activities.ProfileActivity">

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_image"
        android:layout_marginTop="30dp"
        android:text="@string/display_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name"
        android:layout_marginTop="20dp"
        android:text="@string/hey_i_m_on_chatapp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/user_friends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_status"
        android:layout_marginTop="150dp"
        android:text="@string/total_friends"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/send_friend_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_friends"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/send_friend_request"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/decline_friend_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/send_friend_request"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/decline_friend_request"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:visibility="gone" />
</RelativeLayout>