<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/design_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_the_nchatapp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="15sp"
        android:layout_below="@id/design_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/need_a_new_account"
        android:backgroundTint="@android:color/white"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="15sp"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>


</RelativeLayout>